--- a/src/main/resources/templates/class-timetable.html
+++ b/src/main/resources/templates/class-timetable.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grit - Strength</title>
+    <title>Timetable - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -44,18 +44,18 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/classes">Programs</a></li>
+            <!--                <li><a href="/classes">Programs</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/team">Our Team</a></li>
-            <li class="active"><a href="#">Pages</a>
+            <li><a href="/team">Shop</a></li>
+            <li><a href="#">Pages</a>
                 <ul class="dropdown">
                     <li><a href="/about-us">About us</a></li>
                     <li><a href="/class-timetable">Programs timetable</a></li>
                     <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                    <li><a href="/team">Our team</a></li>
+                    <li><a href="/team">Shop</a></li>
                     <li><a href="/gallery">Gallery</a></li>
                     <li><a href="/blog">Our blog</a></li>
-                    <li><a href="/404">404</a></li>
+                    <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
             <li><a href="/contact">Contact</a></li>
@@ -64,7 +64,7 @@
     <div id="mobile-menu-wrap"></div>
     <div class="canvas-social">
 
-        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -86,20 +86,20 @@
             <div class="col-lg-6">
                 <nav class="nav-menu">
                     <ul>
-                        <li ><a href="/">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="/about-us">About Us</a></li>
-                        <li><a href="/class-details">Programs</a></li>
+                        <!--                            <li><a href="/class-details">Programs</a></li>-->
                         <li><a href="/services">Services</a></li>
-                        <li><a href="/team">Our Team</a></li>
-                        <li><a href="#">Pages</a>
+                        <li><a href="/team">Shop</a></li>
+                        <li class="active"><a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a href="/about-us">About us</a></li>
+                                <!--                                    <li><a href="/about-us">About us</a></li>-->
                                 <li><a href="/class-timetable">Programs timetable</a></li>
                                 <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                                <li><a href="/team">Our team</a></li>
+                                <!--                                    <li><a href="/team">Shop</a></li>-->
                                 <li><a href="/gallery">Gallery</a></li>
                                 <li><a href="/blog">Our blog</a></li>
-                                <li><a href="/404">404</a></li>
+                                <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
                         <li><a href="contact">Contact</a></li>
@@ -109,10 +109,11 @@
             <div class="col-lg-3">
                 <div class="top-option">
                     <div class="to-search search-switch">
-                        <i class="fa fa-search"></i>
+                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+                        <a href="/registration"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
-                        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -133,7 +134,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Timetable</h2>
+                        <h2>My 1-on-1 Session Availability</h2>
                         <div class="bt-option">
                             <a href="/index">Home</a>
                             <a href="#">Pages</a>
@@ -187,110 +188,110 @@
                                 <tr>
                                     <td class="class-time">6.00am - 8.00am</td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>WEIGHT LOOSE</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>WEIGHT LOSS</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Cardio</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>STRENGTH</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>Yoga</h5>
-                                        <span>Keaf Shen</span>
+                                        <h5>FULL BODY</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Fitness</h5>
-                                        <span>Kimberly Stone</span>
+                                        <h5>CARDIO</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg blank-td"></td>
                                     <td class="hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Boxing</h5>
-                                        <span>Rachel Adam</span>
+                                        <h5>HIIT</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>Body Building</h5>
-                                        <span>Robert Cage</span>
+                                        <h5>STRENGTH</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="class-time">10.00am - 12.00am</td>
                                     <td class="blank-td"></td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Fitness</h5>
-                                        <span>Kimberly Stone</span>
+                                        <h5>FULL BODY</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>WEIGHT LOOSE</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>WEIGHT LOSS</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Cardio</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>STRENGTH</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>Body Building</h5>
-                                        <span>Robert Cage</span>
+                                        <h5>BODY BUILDING</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Karate</h5>
-                                        <span>Donald Grey</span>
+                                        <h5>HIIT</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="blank-td"></td>
                                 </tr>
                                 <tr>
                                     <td class="class-time">5.00pm - 7.00pm</td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Boxing</h5>
-                                        <span>Rachel Adam</span>
+                                        <h5>CARDIO</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Karate</h5>
-                                        <span>Donald Grey</span>
+                                        <h5>MOBILITY</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
                                         <h5>Body Building</h5>
-                                        <span>Robert Cage</span>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="blank-td"></td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>Yoga</h5>
-                                        <span>Keaf Shen</span>
+                                        <h5>CARDIO</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Cardio</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>HIIT</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Fitness</h5>
-                                        <span>Kimberly Stone</span>
+                                        <h5>FULL BODY</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="class-time">7.00pm - 9.00pm</td>
                                     <td class="hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Cardio</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>BODY BUILDING</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg blank-td"></td>
                                     <td class="hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Boxing</h5>
-                                        <span>Rachel Adam</span>
+                                        <h5>CARDIO</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>Yoga</h5>
-                                        <span>Keaf Shen</span>
+                                        <h5>HOME WORKOUTS</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="motivation">
-                                        <h5>Karate</h5>
-                                        <span>Donald Grey</span>
+                                        <h5>MOBILITY</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="dark-bg hover-bg ts-meta" data-tsmeta="fitness">
-                                        <h5>Boxing</h5>
-                                        <span>Rachel Adam</span>
+                                        <h5>STRENGTH</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                     <td class="hover-bg ts-meta" data-tsmeta="workout">
-                                        <h5>WEIGHT LOOSE</h5>
-                                        <span>RLefew D. Loee</span>
+                                        <h5>WEIGHT LOSS</h5>
+                                        <span>Amiel De Los Reyes</span>
                                     </td>
                                 </tr>
                             </tbody>
@@ -333,7 +334,7 @@
 <!-- Get In Touch Section End -->
 
 <!-- Footer Section Begin -->
-<section class="footer-section" th:replace="footer">
+<section class="footer-section" th:replace="~{footer}">
 </section>
 <!-- Footer Section End -->
 
