--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grit - Strength</title>
+    <title>Home - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -44,18 +44,18 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about-us">About Us</a></li>
-                <li><a href="/classes">Programs</a></li>
+<!--                <li><a href="/classes">Programs</a></li>-->
                 <li><a href="/services">Services</a></li>
-                <li><a href="/team">Our Team</a></li>
+                <li><a href="/team">Shop</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
                         <li><a href="/about-us">About us</a></li>
                         <li><a href="/class-timetable">Programs timetable</a></li>
                         <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                        <li><a href="/team">Our team</a></li>
+                        <li><a href="/team">Shop</a></li>
                         <li><a href="/gallery">Gallery</a></li>
                         <li><a href="/blog">Our blog</a></li>
-                        <li><a href="/404">404</a></li>
+<!--                        <li><a href="/404">404</a></li>-->
                     </ul>
                 </li>
                 <li><a href="/contact">Contact</a></li>
@@ -64,7 +64,7 @@
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
 
-            <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
             <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
             <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -88,18 +88,18 @@
                         <ul>
                             <li class="active"><a href="/">Home</a></li>
                             <li><a href="/about-us">About Us</a></li>
-                            <li><a href="/class-details">Programs</a></li>
+<!--                            <li><a href="/class-details">Programs</a></li>-->
                             <li><a href="/services">Services</a></li>
-                            <li><a href="/team">Our Team</a></li>
+                            <li><a href="/team">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
-                                    <li><a href="/about-us">About us</a></li>
+<!--                                    <li><a href="/about-us">About us</a></li>-->
                                     <li><a href="/class-timetable">Programs timetable</a></li>
                                     <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                                    <li><a href="/team">Our team</a></li>
+<!--                                    <li><a href="/team">Shop</a></li>-->
                                     <li><a href="/gallery">Gallery</a></li>
                                     <li><a href="/blog">Our blog</a></li>
-                                    <li><a href="/404">404</a></li>
+<!--                                    <li><a href="/404">404</a></li>-->
                                 </ul>
                             </li>
                             <li><a href="contact">Contact</a></li>
@@ -113,7 +113,7 @@
                             <a href="/registration"><i class="fa fa-user"></i></a>
                         </div>
                         <div class="to-social">
-                            <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                            <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                             <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                             <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -226,7 +226,7 @@
                         <div class="ci-text">
                             <span>BEGINNER</span>
                             <h5>Less than 1 year of fitness experience.</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+<!--                            <a href="#"><i class="fa fa-angle-right"></i></a>-->
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                         <div class="ci-text">
                             <span>INTERMEDIATE</span>
                             <h5>If you have 1 - 3 years of fitness experience.</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+<!--                            <a href="#"><i class="fa fa-angle-right"></i></a>-->
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         <div class="ci-text">
                             <span>ADVANCED</span>
                             <h5>If you have 3+ year of fitness experience.</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+<!--                            <a href="#"><i class="fa fa-angle-right"></i></a>-->
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                     <div class="bs-text">
                         <h2>Seize the Opportunity: Register Now for Exclusive Deals!</h2>
                         <div class="bt-tips">Where Grit and Muscle Forge the Ultimate You.</div>
-                        <a href="#" class="primary-btn  btn-normal">Appointment</a>
+                        <a href="/registration" class="primary-btn  btn-normal">Appointment</a>
                     </div>
                 </div>
             </div>
@@ -326,7 +326,7 @@
                             <li><b>You Decide:</b> You can choose how often you want to do the exercises.</li>
                             <li><b>Personalized:</b> Provides you a workout-specific based on your goals.</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
 <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                             <li><b>See Progress:</b> You'll notice you're getting better and stronger.</li>
 
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
 <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
@@ -363,7 +363,7 @@
                             <li><b>Continuous Support:</b> Ongoing assistance as you progress on your journey.</li>
 
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
 <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
@@ -405,7 +405,7 @@
 <!--                <div class="col-lg-12">-->
 <!--                    <div class="team-title">-->
 <!--                        <div class="section-title">-->
-<!--                            <span>Our Team</span>-->
+<!--                            <span>Shop</span>-->
 <!--                            <h2>TRAIN WITH EXPERTS</h2>-->
 <!--                        </div>-->
 <!--                        <a href="#" class="primary-btn btn-normal appoinment-btn">appointment</a>-->
