--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grit - Strength</title>
+    <title>Services - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -44,18 +44,18 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/classes">Programs</a></li>
+            <!--                <li><a href="/classes">Programs</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/team">Our Team</a></li>
+            <li><a href="/team">Shop</a></li>
             <li><a href="#">Pages</a>
                 <ul class="dropdown">
                     <li><a href="/about-us">About us</a></li>
                     <li><a href="/class-timetable">Programs timetable</a></li>
                     <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                    <li><a href="/team">Our team</a></li>
+                    <li><a href="/team">Shop</a></li>
                     <li><a href="/gallery">Gallery</a></li>
                     <li><a href="/blog">Our blog</a></li>
-                    <li><a href="/404">404</a></li>
+                    <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
             <li><a href="/contact">Contact</a></li>
@@ -64,7 +64,7 @@
     <div id="mobile-menu-wrap"></div>
     <div class="canvas-social">
 
-        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -88,18 +88,18 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about-us">About Us</a></li>
-                        <li><a href="/class-details">Programs</a></li>
+                        <!--                            <li><a href="/class-details">Programs</a></li>-->
                         <li class="active"><a href="/services">Services</a></li>
-                        <li><a href="/team">Our Team</a></li>
+                        <li><a href="/team">Shop</a></li>
                         <li><a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a href="/about-us">About us</a></li>
+                                <!--                                    <li><a href="/about-us">About us</a></li>-->
                                 <li><a href="/class-timetable">Programs timetable</a></li>
                                 <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                                <li><a href="/team">Our team</a></li>
+                                <!--                                    <li><a href="/team">Shop</a></li>-->
                                 <li><a href="/gallery">Gallery</a></li>
                                 <li><a href="/blog">Our blog</a></li>
-                                <li><a href="/404">404</a></li>
+                                <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
                         <li><a href="contact">Contact</a></li>
@@ -109,10 +109,11 @@
             <div class="col-lg-3">
                 <div class="top-option">
                     <div class="to-search search-switch">
-                        <i class="fa fa-search"></i>
+                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+                        <a href="/registration"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
-                        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -159,52 +160,50 @@
             <div class="row">
                 <div class="col-lg-3 order-lg-1 col-md-6 p-0">
                     <div class="ss-pic">
-                        <img src="img/services/services-1.jpg" alt="">
+                        <img src="img/services1.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-2 col-md-6 p-0">
                     <div class="ss-text">
                         <h4>Personal training</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut dolore
-                            facilisis.</p>
-                        <a href="#">Explore</a>
+                        <p>Elevate your fitness journey with Grit Dominate's online personal training, designed to help you reach your peak performance and unlock your full potential.</p>
+                        <a href="#pricing">Explore</a>
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-3 col-md-6 p-0">
                     <div class="ss-pic">
-                        <img src="img/services/services-2.jpg" alt="">
+                        <img src="img/services2.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-4 col-md-6 p-0">
                     <div class="ss-text">
-                        <h4>Group fitness Programs</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus.</p>
-                        <a href="#">Explore</a>
+                        <h4>Home Workouts</h4>
+                        <p>No gym access? Achieve your physique goals with Grit Dominate's home workouts!</p>
+                        <a href="#pricing">Explore</a>
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-8 col-md-6 p-0">
                     <div class="ss-pic">
-                        <img src="img/services/services-4.jpg" alt="">
+                        <img src="img/services3.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-7 col-md-6 p-0">
                     <div class="ss-text second-row">
                         <h4>Body building</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut dolore
-                            facilisis.</p>
-                        <a href="#">Explore</a>
+                        <p>Unlock your full potential with Grit Dominate's program, tailored to maximize your muscle gains and sculpt your physique through specialized online personal training for bodybuilding.</p>
+                        <a href="#pricing">Explore</a>
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-6 col-md-6 p-0">
                     <div class="ss-pic">
-                        <img src="img/services/services-3.jpg" alt="">
+                        <img src="img/services4.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-5 col-md-6 p-0">
                     <div class="ss-text second-row">
-                        <h4>Strength training</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus.</p>
-                        <a href="#">Explore</a>
+                        <h4>Weight Loss Program</h4>
+                        <p>Kickstart your weight loss journey with Grit Dominate's program, a personalized online training experience designed to help you shed pounds and achieve your fitness goals.</p>
+                        <a href="#pricing">Explore</a>
                     </div>
                 </div>
             </div>
@@ -218,10 +217,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="bs-text service-banner">
-                        <h2>Exercise until the body obeys.</h2>
-                        <div class="bt-tips">Where health, beauty and fitness meet.</div>
-                        <a href="https://www.youtube.com/watch?v=EzKkl64rRbM" class="play-btn video-popup"><i
-                                class="fa fa-caret-right"></i></a>
+                        <h2>Seize the Opportunity: Register Now for Exclusive Deals!</h2>
+                        <div class="bt-tips">Where Grit and Muscle Forge the Ultimate You.</div>
+                        <a href="/registration" class="primary-btn  btn-normal">Appointment</a>
                     </div>
                 </div>
             </div>
@@ -229,79 +227,78 @@
     </section>
     <!-- Banner Section End -->
 
-    <!-- Pricing Section Begin -->
-    <section class="pricing-section service-pricing spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <span>Our Plan</span>
-                        <h2>Choose your pricing plan</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-8">
-                    <div class="ps-item">
-                        <h3>Class drop-in</h3>
-                        <div class="pi-price">
-                            <h2>$ 39.0</h2>
-                            <span>SINGLE CLASS</span>
-                        </div>
-                        <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing Programs</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
-                        </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
-                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8">
-                    <div class="ps-item">
-                        <h3>12 Month unlimited</h3>
-                        <div class="pi-price">
-                            <h2>$ 99.0</h2>
-                            <span>SINGLE CLASS</span>
-                        </div>
-                        <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing Programs</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
-                        </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
-                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8">
-                    <div class="ps-item">
-                        <h3>6 Month unlimited</h3>
-                        <div class="pi-price">
-                            <h2>$ 59.0</h2>
-                            <span>SINGLE CLASS</span>
-                        </div>
-                        <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing Programs</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
-                        </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
-                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
-                    </div>
+<!-- Pricing Section Begin -->
+<section class="pricing-section spad" id="pricing">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <span>Our Plan</span>
+                    <h2>Choose your pricing plan</h2>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Pricing Section End -->
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-8">
+                <div class="ps-item">
+                    <h3>Ready-To-Go Program</h3>
+                    <div class="pi-price">
+                        <h2>&#8369;499.99</h2>
+                        <span>SINGLE PROGRAM (16-Weeks)</span>
+                    </div>
+                    <ul>
+                        <li><b>Start Right Away:</b> You can begin exercising right now with a plan ready for you.</li>
+                        <li><b>Easy to Follow:</b> The exercises are not hard to do, and you don't need to think too much.</li>
+                        <li><b>Easy Instructions:</b> They tell you how to do each exercise in a simple way.</li>
+                        <li><b>No Need to Plan:</b> You don't have to figure out what to do; it's all set.</li>
+                        <li><b>You Decide:</b> You can choose how often you want to do the exercises.</li>
+                        <li><b>Personalized:</b> Provides you a workout-specific based on your goals.</li>
+                    </ul>
+                    <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                    <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-8">
+                <div class="ps-item">
+                    <h3>Ready-to-Go Jumpstart with Consultation Program</h3>
+                    <div class="pi-price">
+                        <h2>&#8369;599.99</h2>
+                        <span>SINGLE PROGRAM WITH CONSULTATION</span>
+                    </div>
+                    <ul>
+                        <li><b>Instant Workout Plan:</b> Start exercising right away with a plan ready for you.</li>
+                        <li><b>Personal Consultation:</b> Get one-on-one guidance to help you succeed.</li>
+                        <li><b>Different Kinds of Exercise:</b> You'll do different exercises to keep it interesting.</li>
+                        <li><b>No Need to Plan:</b> You don't have to figure out what to do; it's all set.</li>
+                        <li><b>See Progress:</b> You'll notice you're getting better and stronger.</li>
+
+                    </ul>
+                    <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                    <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-8">
+                <div class="ps-item">
+                    <h3>1-on-1 Fit Journey Program</h3>
+                    <div class="pi-price">
+                        <h2>&#8369;649.99</h2>
+                        <span>PER 1 SESSION (&#8369;500 for bundle)</span>
+                    </div>
+                    <ul>
+                        <li><b>Custom Workout Plan:</b> Receive a workout plan designed just for you.</li>
+                        <li><b>Dietary Tips:</b> Basic nutrition advice to support your fitness goals.</li>
+                        <li><b>Flexible Scheduling:</b> Arrange sessions to fit your availability. Meet me at least once a week.</li>
+                        <li><b>Continuous Support:</b> Ongoing assistance as you progress on your journey.</li>
+
+                    </ul>
+                    <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                    <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Pricing Section End -->
 
 <!-- Get In Touch Section Begin -->
 <div class="gettouch-section">
