--- a/src/main/resources/templates/bmi-calculator.html
+++ b/src/main/resources/templates/bmi-calculator.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grit - Strength</title>
+    <title>BMI Calculator - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -44,18 +44,18 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/classes">Programs</a></li>
+            <!--                <li><a href="/classes">Programs</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/team">Our Team</a></li>
+            <li><a href="/team">Shop</a></li>
             <li><a href="#">Pages</a>
                 <ul class="dropdown">
                     <li><a href="/about-us">About us</a></li>
                     <li><a href="/class-timetable">Programs timetable</a></li>
                     <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                    <li><a href="/team">Our team</a></li>
+                    <li><a href="/team">Shop</a></li>
                     <li><a href="/gallery">Gallery</a></li>
                     <li><a href="/blog">Our blog</a></li>
-                    <li><a href="/404">404</a></li>
+                    <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
             <li><a href="/contact">Contact</a></li>
@@ -64,7 +64,7 @@
     <div id="mobile-menu-wrap"></div>
     <div class="canvas-social">
 
-        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -88,18 +88,18 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about-us">About Us</a></li>
-                        <li><a href="/class-details">Programs</a></li>
+                        <!--                            <li><a href="/class-details">Programs</a></li>-->
                         <li><a href="/services">Services</a></li>
-                        <li><a href="/team">Our Team</a></li>
+                        <li><a href="/team">Shop</a></li>
                         <li class="active"><a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a href="/about-us">About us</a></li>
+                                <!--                                    <li><a href="/about-us">About us</a></li>-->
                                 <li><a href="/class-timetable">Programs timetable</a></li>
                                 <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                                <li><a href="/team">Our team</a></li>
+                                <!--                                    <li><a href="/team">Shop</a></li>-->
                                 <li><a href="/gallery">Gallery</a></li>
                                 <li><a href="/blog">Our blog</a></li>
-                                <li><a href="/404">404</a></li>
+                                <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
                         <li><a href="contact">Contact</a></li>
@@ -109,10 +109,11 @@
             <div class="col-lg-3">
                 <div class="top-option">
                     <div class="to-search search-switch">
-                        <i class="fa fa-search"></i>
+                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+                        <a href="/registration"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
-                        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -190,28 +191,29 @@
                         <h2>CALCULATE YOUR BMI</h2>
                     </div>
                     <div class="chart-calculate-form">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.</p>
-                        <form action="#">
+                        <p>BMI, or Body Mass Index, is a numerical measure that assesses an individual's body weight in relation to their height, providing a basic indicator of whether they are underweight, normal weight, overweight, or obese. It is a widely used tool for assessing general health and fitness.</p>
+                        <form id="bmiForm">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <input type="text" placeholder="Height / cm">
+                                    <input type="number" id="height" name="height" placeholder="Height / cm">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" placeholder="Weight / kg">
+                                    <input type="number" id="weight" name="weight" placeholder="Weight / kg">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" placeholder="Age">
+                                    <input type="number" id="age" name="age" placeholder="Age">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" placeholder="Sex">
+                                    <input type="text" id="sex" name="sex" placeholder="Sex">
                                 </div>
-                                <div class="col-lg-12">
+                                <div class="col-lg-12" id="result-container">
                                     <button type="submit">Calculate</button>
                                 </div>
                             </div>
                         </form>
+                        <p id="result"></p>
+                        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                        <script src="script.js"></script>
                     </div>
                 </div>
             </div>
