--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grit - Strength</title>
+    <title>Contact Us - Grit Dominate</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -44,18 +44,18 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/classes">Programs</a></li>
+            <!--                <li><a href="/classes">Programs</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/team">Our Team</a></li>
+            <li><a href="/team">Shop</a></li>
             <li><a href="#">Pages</a>
                 <ul class="dropdown">
                     <li><a href="/about-us">About us</a></li>
                     <li><a href="/class-timetable">Programs timetable</a></li>
                     <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                    <li><a href="/team">Our team</a></li>
+                    <li><a href="/team">Shop</a></li>
                     <li><a href="/gallery">Gallery</a></li>
                     <li><a href="/blog">Our blog</a></li>
-                    <li><a href="/404">404</a></li>
+                    <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
             <li><a href="/contact">Contact</a></li>
@@ -64,7 +64,7 @@
     <div id="mobile-menu-wrap"></div>
     <div class="canvas-social">
 
-        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -88,18 +88,18 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about-us">About Us</a></li>
-                        <li><a href="/class-details">Programs</a></li>
+                        <!--                            <li><a href="/class-details">Programs</a></li>-->
                         <li><a href="/services">Services</a></li>
-                        <li><a href="/team">Our Team</a></li>
+                        <li><a href="/team">Shop</a></li>
                         <li><a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a href="/about-us">About us</a></li>
+                                <!--                                    <li><a href="/about-us">About us</a></li>-->
                                 <li><a href="/class-timetable">Programs timetable</a></li>
                                 <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                                <li><a href="/team">Our team</a></li>
+                                <!--                                    <li><a href="/team">Shop</a></li>-->
                                 <li><a href="/gallery">Gallery</a></li>
                                 <li><a href="/blog">Our blog</a></li>
-                                <li><a href="/404">404</a></li>
+                                <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
                         <li class="active"><a href="contact">Contact</a></li>
@@ -109,10 +109,11 @@
             <div class="col-lg-3">
                 <div class="top-option">
                     <div class="to-search search-switch">
-                        <i class="fa fa-search"></i>
+                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+                        <a href="/registration"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
-                        <a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                         <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
@@ -158,38 +159,62 @@
                     <div class="contact-widget">
                         <div class="cw-text">
                             <i class="fa fa-map-marker"></i>
-                            <p>333 Middle Winchendon Rd, Rindge,<br/> NH 03461</p>
+                            <p>Manila, Philippines</p>
                         </div>
                         <div class="cw-text">
                             <i class="fa fa-mobile"></i>
                             <ul>
-                                <li>125-711-811</li>
-                                <li>125-668-886</li>
+                                <li>+63 956 650 1830</li>
+<!--                                <li>125-668-886</li>-->
                             </ul>
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>Support.gymcenter@gmail.com</p>
+                            <p>gritdominate@gmail.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="leave-comment">
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
+                        <form th:action="@{/contactMe}" method="post">
+                            <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
+                            <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+
+                            <span id="email-error" style="color: red;"></span>
+                            <input type="email" id="email" name="email" placeholder="Email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}" title="Enter a valid email address" required>
+
+                            <script>
+                                function validateEmail() {
+									var emailInput = document.getElementById('email');
+									var emailError = document.getElementById('email-error');
+									var email = emailInput.value;
+
+									var emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+
+									if (!emailPattern.test(email)) {
+										emailError.textContent = 'Enter a valid email address. -> (example@gmail.com)';
+										emailInput.focus();
+										return false;
+									} else {
+										emailError.textContent = '';
+										return true;
+									}
+								}
+                            </script>
+
+
+                            <input type="text" id="phoneNumber" name="phoneNumber" placeholder="Phone Number">
                             <textarea placeholder="Comment"></textarea>
-                            <button type="submit">Submit</button>
+                            <button type="submit" onclick="validateEmail(); return false;">Submit</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.069761554938!2d-74.2175599360452!3d40.767139456514954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c254b5958982c3%3A0xb6ab3931055a2612!2sEast%20Orange%2C%20NJ%2C%20USA!5e0!3m2!1sen!2sbd!4v1581710470843!5m2!1sen!2sbd"
-                    height="550" style="border:0;" allowfullscreen=""></iframe>
-            </div>
+<!--            <div class="map">-->
+<!--                <iframe-->
+<!--                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.069761554938!2d-74.2175599360452!3d40.767139456514954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c254b5958982c3%3A0xb6ab3931055a2612!2sEast%20Orange%2C%20NJ%2C%20USA!5e0!3m2!1sen!2sbd!4v1581710470843!5m2!1sen!2sbd"-->
+<!--                    height="550" style="border:0;" allowfullscreen=""></iframe>-->
+<!--            </div>-->
         </div>
     </section>
     <!-- Contact Section End -->
