--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Gym, unica, creative, html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gym | Template</title>
+  <title>Success - Grit Dominate</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -64,18 +64,18 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/about-us">About Us</a></li>
-      <li><a href="/classes">Programs</a></li>
-      <li><a href="services">Services</a></li>
-      <li><a href="/team">Our Team</a></li>
+      <!--                <li><a href="/classes">Programs</a></li>-->
+      <li><a href="/services">Services</a></li>
+      <li><a href="/team">Shop</a></li>
       <li><a href="#">Pages</a>
         <ul class="dropdown">
           <li><a href="/about-us">About us</a></li>
           <li><a href="/class-timetable">Programs timetable</a></li>
           <li><a href="/bmi-calculator">Bmi calculate</a></li>
-          <li><a href="/team">Our team</a></li>
+          <li><a href="/team">Shop</a></li>
           <li><a href="/gallery">Gallery</a></li>
           <li><a href="/blog">Our blog</a></li>
-          <li><a href="/404">404</a></li>
+          <!--                        <li><a href="/404">404</a></li>-->
         </ul>
       </li>
       <li><a href="/contact">Contact</a></li>
@@ -83,10 +83,11 @@
   </nav>
   <div id="mobile-menu-wrap"></div>
   <div class="canvas-social">
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-youtube-play"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
+
+    <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+    <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+    <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
   </div>
 </div>
 <!-- Offcanvas Menu Section End -->
@@ -95,46 +96,47 @@
 <header class="header-section">
   <div class="container-fluid">
     <div class="row" style="padding-top:0px">
-      <div class="col-lg-3" style="padding-left:20px; padding-top: 0px">
+      <div class="col-lg-3" style="padding-left:50px;">
         <div class="logo">
-          <a href="index">
-            <img src="img/logo.png" alt="" width="250" height="100">
+          <a href="/">
+            <img src="img/logo2.png" alt="" style="height: 65px;">
           </a>
         </div>
       </div>
-      <div class="col-lg-6" style="padding-top: 40px">
+      <div class="col-lg-6">
         <nav class="nav-menu">
           <ul>
-            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/class-details">Programs</a></li>
+            <!--                            <li><a href="/class-details">Programs</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/team">Our Team</a></li>
+            <li><a href="/team">Shop</a></li>
             <li><a href="#">Pages</a>
               <ul class="dropdown">
-                <li><a href="/about-us">About us</a></li>
+                <!--                                    <li><a href="/about-us">About us</a></li>-->
                 <li><a href="/class-timetable">Programs timetable</a></li>
                 <li><a href="/bmi-calculator">Bmi calculate</a></li>
-                <li><a href="/team">Our team</a></li>
+                <!--                                    <li><a href="/team">Shop</a></li>-->
                 <li><a href="/gallery">Gallery</a></li>
                 <li><a href="/blog">Our blog</a></li>
-                <li><a href="/404">404</a></li>
+                <!--                                    <li><a href="/404">404</a></li>-->
               </ul>
             </li>
             <li><a href="contact">Contact</a></li>
           </ul>
         </nav>
       </div>
-      <div class="col-lg-3" style="padding-top: 40px">
+      <div class="col-lg-3">
         <div class="top-option">
           <div class="to-search search-switch">
-            <i class="fa fa-search"></i>
+            <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+            <a href="/registration"><i class="fa fa-user"></i></a>
           </div>
           <div class="to-social">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@grit.dominate?lang=en" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
           </div>
         </div>
       </div>
